# sportquery

./: .gitignore  README.rst  setup.cfg  setup.py
docs/: conf.py  deploy-key.enc  index.rst  nba.rst  refresh_docs.sh
sportquery/: __init__.py
sportquery/nba/: __init__.py  boxscore.py  play_by_play.py  plus_minus.py  schedule.py  schema.py  sync_database.py  teams.py
src/nba/: __init__.py  boxscore.py  play_by_play.py  plus_minus.py  schedule.py  schema.py  teams.py
