[metadata]
name = sportquery
version = attr: sportquery.__version__
description = Data scraper for sportsreference.com affiliate sites
long_description = file: README.rst
long_description_content_type = text/reStructuredText
author = J. Scott Moreland
author_email = morelandjs@gmail.com
url = 'https://github.com/morelandjs/sportquery'
platforms = any

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
  =src
setup_requires =
  pytest-runner
install_requires =
  pandas
tests_require =
  pytest

[options.packages.find]
where = src
exclude = tests

[test]
addopts = tests

[tool.pytest]
minversion = 6.0
addopts = tests --verbose -s
norecursedirs =
  dist
  build
  .tox

[aliases]
tests = pytest
docs = build_sphinx

[bdist_wheel]
universal = True

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[flake8]
max-line-length = 80
doctests = True
exclude = .git, .eggs, .pyc, tests, docs, dist, _buildn
